@@ -28,7 +28,6 @@
 #include <libxml/parser.h>
 #include "gtksourceview-i18n.h"
 #include "gtksourcebuffer.h"
-#include "gtksourcetag.h"
 #include "gtksourcelanguage.h"
 #include "gtksourcelanguagesmanager.h"
 #include "gtksourcelanguage-private.h"
