@@ -1,33 +1,0 @@
-/* -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8; coding: utf-8 -*-
- *  gtksourcetag.c
- *
- *  Copyright (C) 2003 - Paolo Maggi <paolo.maggi@polito.it>
- *
- *  This program is free software; you can redistribute it and/or modify
- *  it under the terms of the GNU Library General Public License as published by
- *  the Free Software Foundation; either version 2 of the License, or
- *  (at your option) any later version.
- *
- *  This program is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU Library General Public License for more details.
- *
- *  You should have received a copy of the GNU Library General Public License
- *  along with this program; if not, write to the Free Software
- *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
- */
-
-#include "gtksourcetag.h"
-
-G_DEFINE_TYPE (GtkSourceTag, gtk_source_tag, GTK_TYPE_TEXT_TAG)
-
-static void
-gtk_source_tag_class_init (GtkSourceTagClass *klass)
-{
-}
-
-static void
-gtk_source_tag_init (GtkSourceTag *tag)
-{
-}
