@@ -1,5 +1,15 @@
 2006-12-13  Yevgen Muntyan  <muntyan@tamu.edu>
 
+	* gtksourceview/gtksourcetag.[ch]: removed.
+	* gtksourceview/gtksourcecontextengine.c:
+	* gtksourceview/gtksourcelanguage.c:
+	* gtksourceview/gtksourcelanguage-parser-1.c:
+	* gtksourceview/Makefile.am:
+	Removed GtkSourceTag, it's not used anywhere but printing
+	(and that doesn't work).
+
+2006-12-13  Yevgen Muntyan  <muntyan@tamu.edu>
+
 	* gtksourceview/language-specs/convert.py: do convert "globs"
 	attribute.
 	* gtksourceview/language-specs/check.sh:
